--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "@mdi/font": "5.9.55",
+    "@vuepic/vue-datepicker": "^3.6.5",
     "axios": "^1.2.5",
     "core-js": "^3.8.3",
     "roboto-fontface": "*",
+    "vee-validate": "^4.7.3",
     "vue": "^3.2.13",
     "vue-router": "^4.1.6",
     "vuetify": "^3.1.2",
